--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,31 @@
 			display: block;
 			width: 100%;
 		}
+		
+	.bordered-id-pic
+	{
+		display: block;
+		background: #fff url('images/bg04.png');
+		padding: 10px;
+		box-shadow: 3px 3px 3px 1px rgba(0,0,0,0.15);
+		margin: 0 0 1.5em 0;
+		outline: 0;
+	}
+
+		.bordered-feature-image .idpic
+		{
+			display: block;
+			width: auto;
+			height: auto;
+			max-width: 200px;
+			max-height: 200px;
+		}
+	.divider
+	{
+    	width:5px;
+    	height:auto;
+    	display:inline-block;
+	}
 	
 	.button-big
 	{
